do not even invoke remove function if a column is protected

--- a/css/board.css
+++ b/css/board.css
@@ -219,6 +219,10 @@ body {
     cursor: grab;
 }
 
+.column .title-regular .disabled {
+    opacity: .3;
+}
+
 .column .title-left,
 .column .title-right {
     width: calc(var(--font-size) * 1.1);
