add trash can for removed tasks

--- a/css/board.css
+++ b/css/board.css
@@ -64,6 +64,7 @@ body {
 
 #undo {
     font-family: 'IcoFont';
+    font-size: calc(var(--font-size) * 1.3);
     padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
     cursor: pointer;
     user-select: none;
@@ -71,6 +72,7 @@ body {
 
 #users {
     font-family: 'IcoFont';
+    font-size: calc(var(--font-size) * 1.3);
     padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
     cursor: pointer;
     user-select: none;
@@ -100,8 +102,17 @@ body {
     width: 90%;
 }
 
+#trash-can {
+    font-family: 'LineAwesome';
+    font-size: calc(var(--font-size) * 2.0);
+    padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
+    cursor: pointer;
+    user-select: none;
+}
+
 #settings {
     font-family: 'IcoFont';
+    font-size: calc(var(--font-size) * 1.7);
     padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
     cursor: pointer;
     user-select: none;
