--- a/css/board.css
+++ b/css/board.css
@@ -538,11 +538,14 @@ body {
 .modal-data li {
     display: flex;
     justify-content: space-between;
+    font-size: calc(var(--font-size) * 1.2);
+    margin-bottom: calc(var(--font-size) * .5);
 }
 
 .modal-data li div:last-child {
     font-family: 'LineAwesome';
     cursor: pointer;
+    margin-left: calc(var(--font-size) * 1.0);
 }
 
 .modal-data button {
@@ -551,4 +554,19 @@ body {
 
 .modal-data li input, .modal-data li button {
     margin-bottom: calc(var(--font-size) * 1.0);
+}
+
+.modal-data li input {
+    max-width: 60%;
+    min-width: 50%;
+    padding: calc(var(--font-size) * 0.5);
+}
+
+.modal-data li button {
+    min-width: 20%;
+    max-width: 100%;
+}
+
+.modal-column-list li button {
+    padding: calc(var(--font-size) * 0.5);
 }
