--- a/css/board.css
+++ b/css/board.css
@@ -66,10 +66,6 @@ body {
     border-right: 1px solid lightgray;
 }
 
-.menu-icon-bar div {
-    margin-top: calc(var(--font-size) * .5);
-}
-
 #undo {
     font-family: 'IcoFont';
     font-size: calc(var(--font-size) * 1.3);
@@ -80,7 +76,7 @@ body {
 
 #users {
     font-family: 'IcoFont';
-    font-size: calc(var(--font-size) * 1.3);
+    font-size: calc(var(--font-size) * 1.7);
     padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
     cursor: pointer;
     user-select: none;
@@ -146,6 +142,14 @@ body {
     cursor: pointer;
     user-select: none;
     display: none;
+}
+
+#user-profile {
+    font-family: 'IcoFont';
+    font-size: calc(var(--font-size) * 1.3);
+    padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
+    cursor: pointer;
+    user-select: none;
 }
 
 #settings {
@@ -517,6 +521,8 @@ body {
 
 .modal-data button {
     cursor: pointer;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .modal-data li input, .modal-data li button {
@@ -548,6 +554,11 @@ body {
 .modal-help-row p {
     margin: 0;
 }
+
+.menu-icon-bar div {
+    margin-top: calc(var(--font-size) * .5);
+}
+
 
 @media only screen and (min-height: 428px) {
     .menu-icon-bar div {
