--- a/component/ws-login.css
+++ b/component/ws-login.css
@@ -113,6 +113,7 @@ section {
 }
 
 .hello-message {
+  text-align: left;
   color: var(--primary-color);    
   padding-top: calc(var(--font-size) * 2);
 }
@@ -126,7 +127,9 @@ section {
 }
 
 .verified-message {
+  text-align: left;
   margin-top: calc(var(--font-size) * 1);
+  color: var(--primary-color);
 }
 
 #logout-container, #signup-container, 
@@ -254,6 +257,7 @@ section {
 .form-link-container {
   font-family: var(--primary-font);
   font-size: calc(var(--font-size) * 1.125);
+  color: var(--primary-color);
   margin-top: calc(var(--font-size) * 3);
   text-align: center;
 }
@@ -276,10 +280,10 @@ section {
 
 .form-data-sent {
   position: fixed;
-  top: calc(var(--font-size) * var(--header-height) * 0);
+  top: 0;
   left: 0;
   width: 100%;
-  height: calc(100vh - var(--font-size) * var(--header-height) * 0);
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -289,7 +293,7 @@ section {
   z-index: 999;
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(2px);
-  background-color: #0000004f;
+  background-color: var(--primary-bgr-translucent);
   color: var(--primary-color);
   transition: opacity 400ms ease-in-out;
   -webkit-transition: opacity 400ms ease-in-out;
