--- a/css/board.css
+++ b/css/board.css
@@ -39,6 +39,7 @@
     --primary-color: #1a1a1a;
     --secondary-color: #000000;
     --primary-bgr: #ffffff;
+    --primary-bgr-translucent: #ffffff80;
     --secondary-bgr: #f0f0f0;
     --primary-accent: #fa2759;
     --secondary-accent: #2dfcd8;
