--- a/component/ws-login.html
+++ b/component/ws-login.html
@@ -208,6 +208,13 @@
             </div>
 
 
+            <div class="language-container container" id="language-container">
+                <span>Login offered in: </span>
+                <a class="language-link">Deutsch</a>
+                <a class="language-link">English</a>
+            </div>
+
+
             <div tabindex="0" id="form-data-sent" class="form-data-sent">
                 <div class="form-data-sent-message">
                     <h2>Your have signed up successfully.</h2>
