--- a/css/board.css
+++ b/css/board.css
@@ -46,6 +46,10 @@
     --secondary-accent: #2dd0ac;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     overflow-x: hidden;
