--- a/css/board.css
+++ b/css/board.css
@@ -82,37 +82,39 @@ body {
 #undo {
     font-family: 'IcoFont';
     font-size: calc(var(--font-size) * 1.3);
-    padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
     cursor: pointer;
     user-select: none;
+    display: flex;
+    justify-content: center;
 }
 
 #users {
     font-family: 'IcoFont';
     font-size: calc(var(--font-size) * 1.7);
-    padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
     cursor: pointer;
     user-select: none;
+    display: flex;
+    justify-content: center;
 }
 
 #priorities {
     font-family: 'IcoFont';
-    padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
     cursor: pointer;
     user-select: none;
+    display: flex;
+    justify-content: center;
 }
 
 #priorities img {
-    width: calc(var(--font-size) * 2.5);
+    width: calc(var(--font-size) * 1.7);
 }
 
 #add-list {
     font-family: 'IcoFont';
-    padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
     cursor: pointer;
     user-select: none;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 #add-list img {
@@ -121,11 +123,10 @@ body {
 
 #remove-list {
     font-family: 'IcoFont';
-    padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
     cursor: pointer;
     user-select: none;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 #remove-list img {
@@ -135,42 +136,46 @@ body {
 #show-backlog {
     font-family: 'IcoFont';
     font-size: calc(var(--font-size) * 1.7);
-    padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
     cursor: pointer;
     user-select: none;
+    display: flex;
+    justify-content: center;
 }
 
 #trash-can {
     font-family: 'LineAwesome';
     font-size: calc(var(--font-size) * 2.0);
-    padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
     cursor: pointer;
     user-select: none;
+    display: flex;
+    justify-content: center;
 }
 
 #help-icon {
     font-family: 'IcoFont';
     font-size: calc(var(--font-size) * 1.7);
-    padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
     cursor: pointer;
     user-select: none;
     display: none;
+    justify-content: center;
 }
 
 #user-profile {
     font-family: 'IcoFont';
     font-size: calc(var(--font-size) * 1.3);
-    padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
     cursor: pointer;
     user-select: none;
+    display: flex;
+    justify-content: center;
 }
 
 #settings {
     font-family: 'IcoFont';
     font-size: calc(var(--font-size) * 1.7);
-    padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
     cursor: pointer;
     user-select: none;
+    display: flex;
+    justify-content: center;
 }
 
 #board-container {
@@ -591,20 +596,26 @@ body {
     overflow-y: auto;
 }
 
+
+
 .menu-icon-bar div {
     margin-top: calc(var(--font-size) * .05);
+    padding: calc(var(--font-size) * .5) calc(var(--font-size) * 1.0) calc(var(--font-size) * .5) calc(var(--font-size) * 1.0);
 }
 
+.menu-icon-bar div:first-child {
+    margin-top: calc(var(--font-size) * .6);
+}
 
 @media only screen and (min-height: 428px) {
     .menu-icon-bar div {
-        margin-top: calc(var(--font-size) * .4);
+        margin-top: calc(var(--font-size) * .6);
     }
 }
 
 @media only screen and (min-height: 480px) {
     .menu-icon-bar div {
-        margin-top: calc(var(--font-size) * .45);
+        margin-top: calc(var(--font-size) * .6);
     }
     #help-icon {
         display: initial;
@@ -613,6 +624,9 @@ body {
 
 @media only screen and (min-height: 540px) {
     .menu-icon-bar div {
+        margin-top: calc(var(--font-size) * .8);
+    }
+    .menu-icon-bar div:first-child {
         margin-top: calc(var(--font-size) * .8);
     }
 }
