--- a/component/ws-login_de.html
+++ b/component/ws-login_de.html
@@ -209,7 +209,7 @@
 
 
             <div class="language-container container" id="language-container">
-                <span>Login offered in: </span>
+                <span>wsLogin offered in: </span>
                 <a class="language-link">Deutsch</a>
                 <a class="language-link">English</a>
             </div>
