--- a/component/ws-login.html
+++ b/component/ws-login.html
@@ -209,7 +209,7 @@
 
 
             <div class="language-container container" id="language-container">
-                <span>wsLogin offered in: </span>
+                <span>ws-Login offered in: </span>
                 <a class="language-link">Deutsch</a>
                 <a class="language-link">English</a>
             </div>
