--- a/css/board.css
+++ b/css/board.css
@@ -216,7 +216,9 @@ body {
     user-select: none;
     display: flex;
     flex-direction: column;
+    -webkit-user-select: none;
     -webkit-overflow-scrolling: touch;
+    -webkit-user-drag: none;
 }
 
 .column .column-body {
@@ -359,6 +361,8 @@ body {
     margin: calc(var(--font-size) * .5);
     user-select: none;
     /*cursor:pointer;*/
+    -webkit-user-select: none;
+    -webkit-user-drag: none;
 }
 
 .task input, .task textarea {
