--- a/component/ws-login_de.html
+++ b/component/ws-login_de.html
@@ -120,7 +120,7 @@
                             <input id="signup-email" class="form-field"
                                 type="email"
                                 name="email"
-                                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+                                pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,4}$"
                                 required
                                 placeholder="Email...">
                             <div class="hint">
