--- a/css/board.css
+++ b/css/board.css
@@ -76,7 +76,7 @@ body {
     position: fixed;
     top: 0;
     bottom: 0;
-    left: 0;
+    /*left: 0;*/
     background-color: white;
     border-right: 1px solid lightgray;
 }
@@ -181,7 +181,7 @@ body {
 }
 
 #board-container {
-    width: calc(100vw - 4rem);
+    /*width: calc(100vw - 4rem);*/
     height: 100vh;
     display: flex;
     align-items: flex-start;
@@ -190,15 +190,18 @@ body {
     overflow: auto;
     justify-content: flex-start;
     position: relative;
-    left: calc(var(--font-size) * 4);
+    /*left: calc(var(--font-size) * 4);*/
     top: calc(var(--font-size) * 0);
+    max-width: 1920px;
+    margin: 0 auto;
+    box-shadow: 0px 0px 20px 0px rgba(30, 30, 30, .05);
 }
 
 .board {
     width: fit-content;
     display: flex;
     grid-gap: calc(var(--font-size) * 3);
-    margin-left: calc(var(--font-size) * 3.0);
+    margin-left: calc(var(--font-size) * (3.0 + 4.0));
     margin-top: calc(var(--font-size) * 2.5);
     margin-bottom: calc(var(--font-size) * 2.5);
     margin-right: calc(var(--font-size) * 3.0);
@@ -208,6 +211,7 @@ body {
     min-height: fit-content;
     height: fit-content;
     min-width: 13rem;
+    max-width: 20rem;
     background-color: white;
     border-radius: calc(var(--font-size) * .2);
     overflow-y: auto;
